ADD_SUBDIRECTORY(3D/SetScalar)
ADD_SUBDIRECTORY(3D/Assert)
ADD_SUBDIRECTORY(3D/QueueLimit)
ADD_SUBDIRECTORY(3D/If)
ADD_SUBDIRECTORY(3D/While)
ADD_SUBDIRECTORY(3D/Copy)
ADD_SUBDIRECTORY(3D/Kernel)
ADD_SUBDIRECTORY(3D/Set)
ADD_SUBDIRECTORY(3D/Reduction)
ADD_SUBDIRECTORY(3D/RadixSort)
ADD_SUBDIRECTORY(3D/Sort)
ADD_SUBDIRECTORY(3D/LinkList)
IF(AQUAGPUSPH_USE_MPI)
    ADD_SUBDIRECTORY(3D/MPI_sync)
ENDIF(AQUAGPUSPH_USE_MPI)
ADD_SUBDIRECTORY(3D/Python)
ADD_SUBDIRECTORY(3D/MLS)
ADD_SUBDIRECTORY(3D/MLS_32bits)
ADD_SUBDIRECTORY(3D/CSV)
IF(AQUAGPUSPH_USE_VTK)
    ADD_SUBDIRECTORY(3D/SaveVTK)
ENDIF(AQUAGPUSPH_USE_VTK)

ADD_SUBDIRECTORY(2D/SetScalar)
ADD_SUBDIRECTORY(2D/Assert)
ADD_SUBDIRECTORY(2D/QueueLimit)
ADD_SUBDIRECTORY(2D/If)
ADD_SUBDIRECTORY(2D/While)
ADD_SUBDIRECTORY(2D/Copy)
ADD_SUBDIRECTORY(2D/Kernel)
ADD_SUBDIRECTORY(2D/Set)
ADD_SUBDIRECTORY(2D/Reduction)
ADD_SUBDIRECTORY(2D/RadixSort)
ADD_SUBDIRECTORY(2D/Sort)
ADD_SUBDIRECTORY(2D/LinkList)
IF(AQUAGPUSPH_USE_MPI)
    ADD_SUBDIRECTORY(2D/MPI_sync)
    ADD_SUBDIRECTORY(2D/MPI_plane)
ENDIF(AQUAGPUSPH_USE_MPI)
ADD_SUBDIRECTORY(2D/Python)
ADD_SUBDIRECTORY(2D/MLS)
ADD_SUBDIRECTORY(2D/MLS_32bits)
ADD_SUBDIRECTORY(2D/CSV)
IF(AQUAGPUSPH_USE_VTK)
    ADD_SUBDIRECTORY(2D/SaveVTK)
ENDIF(AQUAGPUSPH_USE_VTK)
ADD_SUBDIRECTORY(2D/Regressions/midpoint_predictor)
