add_subdirectory(ExternalTool)

add_subdirectory(3D/SetScalar)
add_subdirectory(3D/Assert)
add_subdirectory(3D/QueueLimit)
add_subdirectory(3D/If)
add_subdirectory(3D/While)
add_subdirectory(3D/Copy)
add_subdirectory(3D/Kernel)
add_subdirectory(3D/Set)
add_subdirectory(3D/Reduction)
add_subdirectory(3D/RadixSort)
add_subdirectory(3D/Sort)
add_subdirectory(3D/LinkList)
IF(AQUAGPUSPH_USE_MPI)
    add_subdirectory(3D/MPI_sync)
ENDIF(AQUAGPUSPH_USE_MPI)
add_subdirectory(3D/Python)
add_subdirectory(3D/MLS)
add_subdirectory(3D/MLS_32bits)
add_subdirectory(3D/CSV)
IF(AQUAGPUSPH_USE_VTK)
    add_subdirectory(3D/SaveVTK)
ENDIF(AQUAGPUSPH_USE_VTK)

add_subdirectory(2D/SetScalar)
add_subdirectory(2D/Assert)
add_subdirectory(2D/QueueLimit)
add_subdirectory(2D/If)
add_subdirectory(2D/While)
add_subdirectory(2D/Copy)
add_subdirectory(2D/Kernel)
add_subdirectory(2D/Set)
add_subdirectory(2D/Reduction)
add_subdirectory(2D/RadixSort)
add_subdirectory(2D/Sort)
add_subdirectory(2D/LinkList)
IF(AQUAGPUSPH_USE_MPI)
    add_subdirectory(2D/MPI_sync)
    add_subdirectory(2D/MPI_plane)
ENDIF(AQUAGPUSPH_USE_MPI)
add_subdirectory(2D/Python)
add_subdirectory(2D/MLS)
add_subdirectory(2D/MLS_32bits)
add_subdirectory(2D/CSV)
IF(AQUAGPUSPH_USE_VTK)
    add_subdirectory(2D/SaveVTK)
ENDIF(AQUAGPUSPH_USE_VTK)
add_subdirectory(2D/Regressions/midpoint_predictor)
