ADD_SUBDIRECTORY(adiabatic_expansion)
ADD_SUBDIRECTORY(cylinder_inside_channel)
ADD_SUBDIRECTORY(lobovsky_etal_2014)
ADD_SUBDIRECTORY(normal_impact)
ADD_SUBDIRECTORY(normal_impact_wall)
ADD_SUBDIRECTORY(shock_chamber)
ADD_SUBDIRECTORY(souto_etal_2012_standingwave)
ADD_SUBDIRECTORY(spheric_testcase3_liddriven)
ADD_SUBDIRECTORY(spheric_testcase5_dambreak)
ADD_SUBDIRECTORY(spheric_testcase6_movingsquare)
ADD_SUBDIRECTORY(spheric_testcase9_tld)
ADD_SUBDIRECTORY(spheric_testcase10_waveimpact)
ADD_SUBDIRECTORY(taylor_green)
